# zrevshell

./: .flake8  .gitignore  README.md  build.py  format.sh  pyproject.toml  ztest.py
reverse_shell/: __init__.py  consts.py  utils.py  victim_computer_specs.json
reverse_shell/hacker/: cli.py  hacker.py
reverse_shell/server/: __init__.py  config.py  database.py  dependency_container.py  main.py  server.py  server_commands.py  server_helper.py  sessions.py
reverse_shell/victim/: Cargo.toml  __init__.py  build.rs  profile.json  victim.py
reverse_shell/victim/src/: lib.rs  main.rs
tests/: configuration.py  conftest.py  helper.py  mock.py  test_server.py
tests/server_test/: helper.py  test_check_verified_request.py  test_integration.py
tests/server_test/server_cmds/: test_create_session.py  test_delete_hacker.py  test_exit_session.py  test_fetch_cmd.py  test_fetch_res.py  test_get_session.py  test_list_victims.py  test_post_cmd.py  test_post_res.py  test_register.py
