[tool.poetry]
name = "zrevshell"
version = "0.1.2-alpha"
description = "A server-client based reverse shell written in Python"
authors = ["Bezaleel Wondimagegn <92359779+bython17@users.noreply.github.com>"]
license = "GPL-3.0 license"
readme = "README.md"
packages = [{include = "reverse_shell"}]

[tool.poetry.dependencies]
python = "^3.10"
typjson = "^0.0.32"

[tool.poe]
poetry_command = "exec"

[tool.poe.tasks]
format = "sh format.sh"
build-victim = {shell = "cd reverse_shell/victim/ && cargo build --release"}
test = "python3 ztest.py server_data/profile.json server_data/data.db"
dev-victim = {shell = "cd reverse_shell/victim/ && cargo run"}
dev-server = "python3 reverse_shell/server/server.py --connect-ip 127.0.0.1 -pf server_data/profile.json -sd server_data/data.db -cid 60 -d"
server = "python3 reverse_shell/server/server.py"
build = "python3 build.py"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
pytest = "^7.2.1"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
colorama = "^0.4.6"
prompt-toolkit = "^3.0.38"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
files = "**/*.py"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"