[package]
name = "victim"
version = "0.1.0"
edition = "2021"

[build-dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[dependencies]
base64 = "0.21.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
shlex = "1.1.0"
sys-info = "0.9.1"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
